Fixed text alignment on the contact page

--- a/css/main.css
+++ b/css/main.css
@@ -326,7 +326,8 @@ section .unplugged {
     left: 0;
 }
 
-
+.mission .mission-content {
+  text-align: justify;
 }
 
 /* ==========================================================================
